@@ -1,3 +1,11 @@
+2011-03-10  Alan Modra  <amodra@gmail.com>
+
+	* elf64-ppc.c (bfd_elf64_bfd_link_just_syms): Define.
+	(ppc64_elf_link_just_syms): New function.
+	(opd_entry_value): Don't assume big-endian host.
+	(get_r2off): New function.
+	(ppc_build_one_stub, ppc_size_one_stub): Use it here.
+
 2011-03-04  Alan Modra  <amodra@gmail.com>
 
 	* archive.c (bsd_write_armap): Don't call stat in deterministic
